--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -1,3 +1,4 @@
+logOut=Log Out
 email=Email
 firstName=First name
 homePage=Home
@@ -7,14 +8,13 @@ phone=Phone
 logIn=Log In
 signUp=Sign Up
 profile=Profile
-logOut=Log Out
 assignment=Assignment
 setTime=Set Time
 description=Description
 save=Save
 time=Time
 requestToDelete=Request to delete
-requestToAdd=
+requestToAdd=Request to add
 sendRequestToDelete=Send request to delete
 chooseActivity=Choose activity
 requestToDeleteAssign=Requests to delete assign
@@ -26,3 +26,11 @@ activity=Activitis
 clients=Clients
 addRequests=Add requests
 deleteRequests=Delete Requests
+enterEmail=Enter email
+enterPassword=Enter password
+noAccount=Don't have an account?
+loginTitle=Login
+haveAcc=Already have an account?
+createAcc=Create account
+enterFirstName=Enter first name
+enterLastName=Enter last name
