--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -4,11 +4,10 @@ firstName=First name
 homePage=Home
 lastName=Last name
 password=Password
-phone=Phone
 logIn=Log In
 signUp=Sign Up
 profile=Profile
-assignment=Assignment
+assignments=Assignments
 setTime=Set Time
 description=Description
 save=Save
@@ -22,7 +21,7 @@ deleteAssign=Delete assign
 createAssign=Create assign
 return=Return
 myAssignments=My assignments
-activity=Activitis
+activity=Activities
 clients=Clients
 addRequests=Add requests
 deleteRequests=Delete Requests
@@ -34,3 +33,7 @@ haveAcc=Already have an account?
 createAcc=Create account
 enterFirstName=Enter first name
 enterLastName=Enter last name
+englishLang=English
+russianLang=Russian
+ukrainianLang=Ukrainian
+assignment=Assignment
