--- a/src/main/resources/pages/pagescfg.properties
+++ b/src/main/resources/pages/pagescfg.properties
@@ -12,3 +12,4 @@ USER_ASSIGNMENTS =/WEB-INF/views/comp/data/clientData/userAssignmentsList.jsp
 SET_TIME = /WEB-INF/views/comp/data/clientData/setTime.jsp
 ACTIVE_ASSIGNMENTS = /WEB-INF/views/comp/data/adminData/activeAssignments.jsp
 ASSIGNMENTS_TO_DELETE = /WEB-INF/views/comp/data/clientData/requestToDelete.jsp
+SHOW_ACTIVITIES_ADMIN = /WEB-INF/views/comp/data/adminData/activitiesAdmin.jsp
